<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TraceM</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="my_job">My Job</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_open">Open</string>
    <string name="my_schedule">My Schedule</string>
    <string name="my_plans">My Plans</string>
    <string name="my_path">My Path</string>
    <string name="my_visit">My Visit</string>
    <string name="aufnr">Order Number</string>
    <string name="aufart">Order Type</string>
    <string name="auftext">Description</string>
    <string name="co_gstrp">Start Date</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="select_picture">Select Picture</string>

    <color name="blue_sf">#779FF7</color>
    <color name="obscure_bg">#8D8C8B</color>

    <string-array name="my_job_items">
        <item>Plans</item>
        <item>Schedule</item>
        <item>Path</item>
        <item>Visit</item>
    </string-array>
    <string-array name="my_job_filter_options">
        <item>Opened</item>
        <item>Closed</item>
        <item>In process</item>
        <item>Canceled</item>
    </string-array>

    <drawable name="table_divider">#606060</drawable>

    <string name="create_schedule">Create program</string>
    <string name="create_schedule_success">Program created successfully</string>
    <string name="update_schedule">update program</string>
    <string name="update_schedule_success">Program updated successfully</string>
    <string name="filter">Filter</string>

    <string-array name="filters">
        <item>in process</item>
    </string-array>

    <string name="search">Search</string>
    <string name="update">Update</string>
    <string name="equipment">Equipment</string>
    <string name="visit">Vistit</string>
    <string name="pick_date">Pick date</string>
    <string name="date_low">Date low</string>
    <string name="date_high">Date high</string>
    <string name="move_to_plan">Move to plan</string>
    <string name="move_to_orders">Move to orders</string>
    <string name="save">Save</string>
    <string name="activate_schedule">Activate schedule</string>
    <string name="order_description">Order Description</string>
    <string name="creation_schedule_error">Unable to create schedule</string>
    <string name="schedule_created">Schedule created</string>
    <string name="welcome">Welcome</string>
    <string name="incorrect_login">User does not exist</string>
    <string name="path_locations">Path locations</string>
    <string name="location">Location</string>
    <string name="add_location">Add location</string>
    <string name="normal_map">Normal</string>
    <string name="satelite_map">Satellite</string>
    <string name="terrain_map">Terrain</string>
    <string name="hybrid_map">Hybrid</string>

    <string-array name="main_menu_titles">
        <item>My job</item>
        <item>My stock</item>
        <item>My purchases</item>
        <item>My effort</item>
        <item>My notifications</item>
    </string-array>

    <string name="logout">Logout</string>
    <string name="logout_error">Logout connection error</string>

    <color name="light_gray">#F4F4F4</color>
    <!-- <color name="light_gray">#F0F0F0</color> -->

    <string name="loading">Loading</string>
    <string name="delete">Delete</string>
    <string name="update_schedule_error">Error updating schedule</string>
    <string name="delete_schedule_success">Schedule deleted</string>
    <string name="delete_schedule_error">Schedule can not be deleted</string>
    <string name="create_visit">Create visit</string>
    <string name="complete">Complete</string>
    <string name="hours">Hrs</string>
    <string name="components">Components</string>
    <string name="automatic">Automatic</string>
    <string name="fini">Start date</string>
    <string name="hini">Start time</string>
    <string name="point">Point</string>
    <string name="description">Description</string>
    <string name="read">Read</string>
    <string name="unit">Unit</string>
    <string name="notes">Notes</string>
    <string name="create_visit_error">Visit not created</string>
    <string name="visit_created">Visit created with number </string>
    <string name="close_visit">Close visit</string>
    <string name="visit_closed">Visit closed</string>
    <string name="visit_closed_error">Visit could not be closed</string>
    <string name="edit">Edit</string>
    <string name="save_schedule_alert">Your schedule does not have 40 hrs or more</string>
    <string name="in_process">In process</string>
    <string name="close">Close</string>
    <string name="schedule_modified_error">Schedule could not be modified</string>
    <string name="schedule_modified">Schedule modified</string>
    <string name="closed">Closed</string>
    <string name="active">Active</string>
    <string name="created">Created</string>
    <string name="scan_qr">Scan QR</string>
    <string name="non_active_schedule">There is not an active schedule</string>
    <string name="move">Move</string>
    <string name="schedule">Schedule</string>
    <string name="plan">Plan</string>
    <string name="manual">Manual</string>
    <string name="unatended">Unatended</string>
    <string name="confirmed">Confirmed</string>
    <string name="schedule_orders">Schedule orders</string>
    <string name="estimated_time">Estimated Time</string>
    <string name="confirmed_time">Confirmed Time</string>
    <string name="save_picture">Save picture</string>
    <string name="path">Path</string>
    <string name="visit_id">Visit No.</string>
    <string name="add_location_error">Unable to add current location</string>

</resources>