<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/schedule"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/background_light"
    tools:ignore="HardcodedText" >

    <Spinner
        android:id="@+id/weekNumberSpinner"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" />

    <Spinner
        android:id="@+id/yearSpinner"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/weekNumberSpinner" />

    <LinearLayout
        android:id="@+id/directionLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/toPlanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/move_to_plan"
            android:src="@android:drawable/ic_media_next" />

        <ImageButton
            android:id="@+id/toOrdersButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/move"
            android:src="@android:drawable/ic_media_previous" />
    </LinearLayout>

    <ListView
        android:id="@+id/orderList"
        style="@style/listview_selected_item"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_above="@+id/hours_plan_text"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/yearSpinner"
        android:layout_toLeftOf="@+id/directionLinearLayout"
        android:choiceMode="singleChoice" >
    </ListView>

    <ListView
        android:id="@+id/planList"
        style="@style/listview_selected_item"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/orderList"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/weekNumberSpinner"
        android:layout_toRightOf="@+id/directionLinearLayout"
        android:choiceMode="singleChoice" >
    </ListView>

    <TextView
        android:id="@+id/hours_schedule_text"
        style="@style/total_hours_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/hours_plan_text"
        android:layout_alignBottom="@+id/hours_plan_text"
        android:layout_toRightOf="@+id/hours_schedule"
        android:text="@string/hours"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/hours_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/hours_schedule_text"
        android:layout_alignBottom="@+id/hours_schedule_text"
        android:layout_alignLeft="@+id/planList"
        android:text="0"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/plan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/hours_plan_text"
        android:layout_alignBottom="@+id/hours_plan_text"
        android:layout_alignRight="@+id/orderList"
        android:text="@string/plan"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/hours_plan_text"
        style="@style/total_hours_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="14dp"
        android:layout_toLeftOf="@+id/plan"
        android:text="@string/hours"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/hours_plan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/hours_plan_text"
        android:layout_alignBottom="@+id/hours_plan_text"
        android:layout_toLeftOf="@+id/hours_plan_text"
        android:text="0"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/hours_schedule_text"
        android:layout_alignBottom="@+id/hours_schedule_text"
        android:layout_toRightOf="@+id/hours_schedule_text"
        android:text="@string/schedule"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>